I added the contact us links and the links to the whatsapp group link plus the final changes

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,26 +1,30 @@
 <div class="topHead w-full">
   <div class="nav flex justify-center items-center py-3">
-    <div
+    <a
+      href="#past"
       class="text-white hidden sm:block cursor-pointer hover:text-yellow-300 navLink me-7"
     >
       Past Fests
-    </div>
-    <div
+    </a>
+    <a
+      href="#tickets"
       class="text-white hidden sm:block cursor-pointer hover:text-yellow-300 navLink"
     >
       Tickets
-    </div>
+    </a>
     <img src="/dtf-logo.jpg" alt="logo" class="w-14 mx-10" />
-    <div
+    <a
+      href="#lineup"
       class="text-white hidden sm:block cursor-pointer hover:text-yellow-300 navLink me-7"
     >
       Line ups
-    </div>
-    <div
+    </a>
+    <a
+      href="#contact"
       class="text-white hidden sm:block cursor-pointer hover:text-yellow-300 navLink"
     >
       Contact
-    </div>
+    </a>
   </div>
   <div class="relative">
     <img src="/Group 39311.svg" class="mx-auto" alt="" />
@@ -135,7 +139,7 @@
     </div>
   </div>
 </div>
-<div class="">
+<div class="" id="past">
   <div class="folder-head-2 slated-2 h-10">
     <div
       class="rounded-br-2xl inner-shadow from-black slated bg-gradient-to-t to-transparent"
@@ -231,7 +235,7 @@
     </div>
   </div>
 </div>
-<div class="">
+<div class="" id="tickets">
   <div class="folder-head slated h-10">
     <div class="rounded-br-2xl inner-shadow slated-2"></div>
     <div
@@ -332,7 +336,7 @@
     </div>
   </div>
 </div>
-<div class="">
+<div class="" id="lineup">
   <div class="folder-head-3 bg-blue-950 h-10">
     <div class="rounded-br-2xl inner-shadow slated"></div>
     <div
@@ -368,7 +372,7 @@
     </div>
   </div>
 </div>
-<div class="">
+<div class="" id="contact">
   <div class="folder-head-2 slated h-10">
     <div class="rounded-br-2xl inner-shadow bg-blue-950"></div>
     <div
@@ -391,11 +395,19 @@
       <img src="/image 168.svg" loading="lazy" alt="camm" />
       Hit us up for any inquiries.
     </div>
-    <a
-      href="https://www.instagram.com/downtownfest.ng/"
-      class="rounded-full px-3 py-2 bg-yellow-300 text-black font-bold text-xl uppercase w-full"
-    >
-      contact us
-    </a>
+    <div class="flex justify-center gap-3 sm:gap-8 items-center my-3 text-center whitespace-nowrap">
+      <a
+        href="https://www.instagram.com/downtownfest.ng/"
+        class="rounded-full px-3 py-2 bg-yellow-300 hover:bg-yellow-500 text-black font-normal min-w-36 sm:font-bold text-xl uppercase w-full"
+      >
+        contact us
+      </a>
+      <a
+        href="https://chat.whatsapp.com/HopLnwtoKQq3aGzjxCCI4Q"
+        class="rounded-full px-3 py-2 bg-teal-700 hover:bg-teal-400 text-white font-normal min-w-36 sm:font-bold text-xl uppercase w-full"
+      >
+        join us
+      </a>
+    </div>
   </div>
 </div>
