--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -32,7 +32,7 @@
       class="absolute -bottom-10 md:bottom-20 left-1/3 md:left-1/2 -translate-x-8 md:-translate-x-full bookBadge flex justify-center items-center"
     >
       <!-- <img src="/Group 39264.svg" alt="" /> -->
-      <span class="underline underline-offset-2 font-bold">BOOK NOW</span>
+      <a href="#tickets" class="underline underline-offset-2 font-bold">BOOK NOW</a>
     </div>
   </div>
   <div class="intro mt-24 text-white pb-6 px-6 md:px-28">
